# pets

./: .gitignore  CMakeLists.txt  README.md
CPU vs GPU on GD/scripts/: plots_convergence.py  run_and_plot.bat  run_and_plot.ps1
CPU vs GPU on gradient descent/: CMakeLists.txt  Readme.md
CPU vs GPU on gradient descent/include/: optimizers.cuh
CPU vs GPU on gradient descent/src/: optimizers.cu
CPU_vs_GPU_on_GD/: CMakePresets.json  Readme.md
CPU_vs_GPU_on_GD/include/: utils.hpp
CPU_vs_GPU_on_GD/scripts/: plots_convergence.py  run_and_plot.ps1
CPU_vs_GPU_on_GD/src/: main.cu  utils.cu
cuda/include/: utils.hpp
cuda/src/: main.cu  utils.cu
scripts/: requirements.txt  run_and_plot.bat  run_and_plot.ps1
